# turbo-chat-engine

./: .gitignore  BENCHMARK_REPORT.md  CLAUDE.md  Cargo.toml  Dockerfile  README_CONTEXT.md  chat.md  docker-compose.yml
.sqlx/: query-fbd2c5e1b880296d04b2cf774bc6b59e3008e9659f8c65ab1d45458c3af26903.json
integration/: elysia-chat.ts  useChat.ts
nginx/: nginx.conf
nginx/certs/: README.md
proto/: message.proto
src/: auth.rs  fcm.rs  main.rs  persistence.rs  rate_limit.rs  state.rs  storage.rs  ws_handler.rs
test_client/: README.md  client.ts  package.json  stress.ts
tests/: integration.rs
