[package]
name = "turbo_chat_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# WebSocket
fastwebsockets = { version = "0.8", features = ["upgrade"] }

# HTTP (needed for WebSocket upgrade)
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Protobuf serialization
prost = "0.13"

# Byte buffer utilities
bytes = "1"

# Stream utilities (for Redis PubSub message stream)
futures = "0.3"

# WebSocket client (stress test binary)
tokio-tungstenite = "0.24"

# Redis pub/sub
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Env config
dotenvy = "0.15"

# JWT authentication
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File uploads (Cloudflare R2 / S3-compatible)
aws-sdk-s3 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }

# Unique file keys
uuid = { version = "1", features = ["v4"] }

# FCM push notifications (HTTP client)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[build-dependencies]
# Protobuf code generation
prost-build = "0.13"

[[bin]]
name = "turbo_chat_engine"
path = "src/main.rs"

[[bin]]
name = "stress"
path = "src/bin/stress.rs"
